change: 마이너 UI 변경

--- a/EYAK(rev2)/app/src/main/res/layout/activity_edit_member.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_edit_member.xml
@@ -116,7 +116,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="일어나는 시간: "
+                            android:text="일어나는 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -126,6 +126,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -150,6 +151,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -189,7 +191,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="아침식사 시간: "
+                            android:text="아침식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -199,6 +201,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -223,6 +226,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -264,7 +268,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="점심식사 시간: "
+                            android:text="점심식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -274,6 +278,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -298,6 +303,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -338,7 +344,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="저녁식사 시간: "
+                            android:text="저녁식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -348,6 +354,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -372,6 +379,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -412,7 +420,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="잠자는 시간: "
+                            android:text="잠자는 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -422,6 +430,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -446,6 +455,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -485,7 +495,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="식사 시간: "
+                            android:text="식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -495,6 +505,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -519,6 +530,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
