--- a/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
+++ b/EYAK(rev2)/app/src/main/res/layout/activity_signup.xml
@@ -40,6 +40,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
+            android:backgroundTint="#DDE6ED"
             android:orientation="vertical">
 
             <LinearLayout
@@ -62,6 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:backgroundTint="#DDE6ED"
                     android:fontFamily="@font/tmoney_regular"
                     android:gravity="center"
                     android:hint="닉네임을 입력하세요."
@@ -128,7 +130,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="일어나는 시간: "
+                            android:text="일어나는 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -138,6 +140,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -162,6 +165,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -201,7 +205,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="아침식사 시간: "
+                            android:text="아침식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -211,6 +215,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -235,6 +240,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -276,7 +282,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="점심식사 시간: "
+                            android:text="점심식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -286,6 +292,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -310,6 +317,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -350,7 +358,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="저녁식사 시간: "
+                            android:text="저녁식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -360,6 +368,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -384,6 +393,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -424,7 +434,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="잠자는 시간: "
+                            android:text="잠자는 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -434,6 +444,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -458,6 +469,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -497,7 +509,7 @@
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
                             android:includeFontPadding="false"
-                            android:text="식사 시간: "
+                            android:text="식사 시간  "
                             android:textAlignment="viewEnd"
                             android:textColor="#757863"
                             android:textSize="20sp" />
@@ -507,6 +519,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
@@ -531,6 +544,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:layout_weight="2"
+                            android:backgroundTint="#DDE6ED"
                             android:ems="2"
                             android:fontFamily="@font/tmoney_regular"
                             android:gravity="center"
